DMP-982 Update AddRequest Endpoint Response (#465)
